# UnboundedKnapsackProblem

./: AddOneLocalizer.cpp  AddOneLocalizer.h  BranchAndBound.cpp  BranchAndBound.h  BranchAndBound01.cpp  BranchAndBound01.h  CMakeLists.txt  DatasetReader.cpp  DatasetReader.h  Fitness.h  Genetic.cpp  Genetic.h  Greedy.cpp  Greedy.h  HillClimbing.cpp  HillClimbing.h  HybridFin.cpp  HybridFin.h  HybridIn.cpp  HybridIn.h  HybridInit.cpp  HybridInit.h  Localizer.cpp  Localizer.h  Logger.cpp  Logger.h  Neighbourhood.h  StoppingCondition.h  SwitchObjectsLocalizer.cpp  SwitchObjectsLocalizer.h  Tabu.cpp  Tabu.h  TabuList.cpp  TabuList.h  commun.h  main.cpp
Datasets/: demoinstancetest.txt  exnsds12.ukp
